remove header links in activation page

--- a/app/views/ado-landing-pages/checkout/index.html.erb
+++ b/app/views/ado-landing-pages/checkout/index.html.erb
@@ -1,4 +1,6 @@
-
+<% content_for :header do %>
+  <%= render 'ado-landing-pages/partials/activation_header' %>
+<% end %>
 
   <div class="container">
     <%= render 'ado-landing-pages/checkout/session_nav' %>
