--- a/app/views/ado-landing-pages/distributors.html.erb
+++ b/app/views/ado-landing-pages/distributors.html.erb
@@ -4,18 +4,18 @@
   </script>
 <% end %>
 
-<%= render 'ado-landing-pages/partials/machine_issues' %>
-
-<h2>Official Distributors List</h2>
-<hr>
+<h1>Buy From Distributors</h1>
 
 <p class="lead">
-Machines are built and assembled by distributors. Each may have different design, specifications and pricing so <em>please contact the distributor nearest your location for inquiries</em>.
+Machines are built and assembled by distributors. Each may have different design, specifications and pricing so please contact the distributor nearest your location for inquiries.
 <p>
 
-<div class="alert alert-info">
-  NOTE: To know more about the background and history of distributor, click on "View Profile".
+<%= render 'ado-landing-pages/partials/machine_issues' %>
+
+<div class="alert alert-success">
+  NOTE: To know more about the background and history of distributor, click on <em>"View Profile"</em>.
 </div>
+
 
 <div id="distributors" ng-controller="DistributorsCtrl">
 
