--- a/app/views/ado-landing-pages/checkout/my_cart.html.erb
+++ b/app/views/ado-landing-pages/checkout/my_cart.html.erb
@@ -7,6 +7,10 @@
   </script>
 <% end %>
 
+<% content_for :header do %>
+  <%= render 'ado-landing-pages/partials/activation_header' %>
+<% end %>
+
 <% content_for :content do %>
 
   <div class="container">
