--- a/app/views/ado-landing-pages/partials/_intro_header.html.erb
+++ b/app/views/ado-landing-pages/partials/_intro_header.html.erb
@@ -12,13 +12,13 @@
         <li class="menu-active"><a href="<%= main_app.root_url(subdomain: "www") %>#intro">Home</a></li>
         <li><a href="<%= main_app.root_url(subdomain: "www") %>#about">About</a></li>
         <li><a href="#features">Features</a></li>
-        <li><a href="#how">How It Works</a></li>
+        <li><a href="<%= main_app.buy_url %>">Buy</a></li>
         <li><a href="<%= main_app.lines_url(subdomain: "www") %>">Articles</a></li>
         <li><a href="<%= main_app.thredded_url %>">Forum</a></li>
         <li><a href="<%= main_app.monitor_url %>">Remote</a></li>
         <li><a href="<%= main_app.downloads_url(subdomain: "www") %>">Downloads</a></li>
         <%= render 'ado-landing-pages/partials/signup_nav_item' %>
-        <li class="buy-tickets"><a href="<%= main_app.activation_url(subdomain: "www") %>">Buy Licenses</a></li>
+        <li class="buy-tickets"><a href="<%= main_app.activation_url(subdomain: "www") %>">Buy License</a></li>
       </ul>
     </nav><!-- #nav-menu-container -->
   </div>
