--- a/app/views/ado-landing-pages/downloads.html.erb
+++ b/app/views/ado-landing-pages/downloads.html.erb
@@ -9,7 +9,9 @@
 <h3>Change Logs</h3><a href="<%= main_app.changelogs_url %>">View software change logs</a>
 <hr>
 <h3>Installatin Guide</h3>
-<p>Download the installtion guide in PDF format - <a target="_blank" href="/downloads/adopisowifi-guide.pdf">Installation Guide (PDF)</a></p>
+<p>
+  Please follow <%= link_to "installation guide", guide_url(subdomain: "www") %>.
+</p>
 <hr>
-<h3>Trial Period</h3>
-<p>The software has a trial period of <b>10 days and maximum of 2 connected users at a time</b> . After the trial period, the software will ask for <a href="<%= main_app.activation_url %>"><b>activation code.</b></a></p>
+
+<%= render 'ado-landing-pages/partials/trial_period' %>
