--- a/app/views/ado-landing-pages/checkout/index.html.erb
+++ b/app/views/ado-landing-pages/checkout/index.html.erb
@@ -117,7 +117,7 @@
   </b>
   Once activated, the software will not ask again for activation key even if you reinstall the software image to sd card.
   You are also elligible for new software updates and gain access to new features along the way.
-  In case of your components failed, you can reactivate the license by <b>revoking the license</b> in the
+  In case some of your components failed, you can reactivate the license by <b>revoking the license</b> in the
   <a href="<%= main_app.monitor_url %>">AdoPisoWiFi Remote Management</a>. Prices of our online services may change without prior notice.
   </p>
 </section>
