--- a/app/views/ado-landing-pages/partials/_header.html.erb
+++ b/app/views/ado-landing-pages/partials/_header.html.erb
@@ -1,12 +1,9 @@
 <div class="dark-header" style="margin-bottom: 90px;">
   <header id="header">
     <div class="container-fluid">
-
       <div class="pull-left">
-        <!-- Uncomment below if you prefer to use a text logo -->
         <h1 class="ado-logo"><a href="<%= main_app.root_url(subdomain: "www") %>#intro">Ado<span>Pi</span>Soft</a></h1>
       </div>
-
       <nav id="nav-menu-container">
         <ul class="nav-menu">
           <li class="<%= controller?(:static) && action?(:landing) ? 'menu-active' : '' %>"><a href="<%= main_app.root_url(subdomain: "www") %>#intro">Home</a></li>
@@ -18,9 +15,7 @@
           <%= render 'ado-landing-pages/partials/signup_nav_item' %>
           <li class="buy-tickets"><a href="<%= main_app.activation_url(subdomain: "www") %>">Buy License</a></li>
         </ul>
-      </nav><!-- #nav-menu-container -->
+      </nav>
     </div>
-  </header><!-- #header -->
-
-
+  </header>
 </div>
