--- a/app/views/ado-landing-pages/partials/_signup_nav_item.html.erb
+++ b/app/views/ado-landing-pages/partials/_signup_nav_item.html.erb
@@ -1,3 +1,5 @@
 <% if !user_signed_in? %>
-  <li class="signup-nav"><a href="<%= main_app.new_user_session_url %>">Login/Sign Up</a></li>
+  <li class="signup-nav">
+    <a href="<%= main_app.new_user_session_url %>">Login/Sign Up</a>
+  </li>
 <% end %>
