link to how to be a distributor

--- a/app/views/ado-landing-pages/checkout/index.html.erb
+++ b/app/views/ado-landing-pages/checkout/index.html.erb
@@ -55,7 +55,7 @@
                 <li><span class="fa-li"><i class="fa fa-check"></i></span>Lifetime License</li>
                 <li><span class="fa-li"><i class="fa fa-check"></i></span>Free software updates</li>
                 <% if p.volume >= 10 %>
-                  <li class="text-danger"><span class="fa-li"><i class="fa fa-check"></i></span>Exclusive For Distributors</li>
+                  <li class="text-danger"><span class="fa-li"><i class="fa fa-check"></i></span> <%= link_to "Exclusive For Distributors", "/blog/articles/how-to-be-a-distributor" %></li>
                 <% else %>
                   <li class="text-success"><span class="fa-li"><i class="fa fa-check"></i></span>Available For All</li>
                 <% end %>
