--- a/app/views/ado-landing-pages/downloads.html.erb
+++ b/app/views/ado-landing-pages/downloads.html.erb
@@ -10,7 +10,7 @@
 <hr>
 <h3>Installatin Guide</h3>
 <p>
-  Please follow <%= link_to "installation guide", guide_url(subdomain: "www") %>.
+  Please follow our <%= link_to "installation guide", guide_url(subdomain: "www") %>.
 </p>
 <hr>
 
