--- a/app/views/ado-landing-pages/privacy_policy.html.erb
+++ b/app/views/ado-landing-pages/privacy_policy.html.erb
@@ -4,12 +4,12 @@
 <p>Effective date: January 1, 2018</p>
 
 
-<p><%= app_name %> ("us", "we", or "our") operates the https://www.adopisoft.com website (the "Service").</p>
+<p><%= app_name %> ("us", "we", or "our") operates the <%= main_app.root_url %> website (the "Service").</p>
 
 <%#<p>This page informs you of our policies regarding the collection, use, and disclosure of personal data when you use our Service and the choices you have associated with that data. Our Privacy Policy  for [app_name] is managed through <a href="https://www.freeprivacypolicy.com/free-privacy-policy-generator.php">Free Privacy Policy Website</a>.</p>%>
 <p>This page informs you of our policies regarding the collection, use, and disclosure of personal data when you use our Service and the choices you have associated with that data.</p>
 
-<p>We use your data to provide and improve the Service. By using the Service, you agree to the collection and use of information in accordance with this policy. Unless otherwise defined in this Privacy Policy, terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, accessible from https://www.adopisoft.com</p>
+<p>We use your data to provide and improve the Service. By using the Service, you agree to the collection and use of information in accordance with this policy. Unless otherwise defined in this Privacy Policy, terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, accessible from <%= main_app.root_url %></p>
 
 
 <h2>Information Collection And Use</h2>
