link to terms and condition

--- a/app/views/ado-landing-pages/checkout/my_cart.html.erb
+++ b/app/views/ado-landing-pages/checkout/my_cart.html.erb
@@ -87,6 +87,12 @@
           <div id="paypal-button"></div>
         </div>
 
+        <p class="text-center">
+        <small>
+          By purchasing our product, you agree to <a target="_blank" href="<%= terms_url(subdomain: "www") %>"><%= app_name %> Terms and Conditions</a>.
+        </small>
+        </p>
+
         <hr>
 
         <p>
