fix terms and conditions date

--- a/app/views/ado-landing-pages/terms_and_condition.html.erb
+++ b/app/views/ado-landing-pages/terms_and_condition.html.erb
@@ -1,7 +1,7 @@
 <h1>Terms and Conditions</h1>
 
 
-<p>Last updated: January, 2018</p>
+<p>Last updated: January 1, 2018</p>
 
 
 <p>These Terms and Conditions ("Terms", "Terms and Conditions") govern your relationship with <%= main_app.root_url %> website (the "Service") operated by <%= app_name %> ("us", "we", or "our").</p>
